se ha arreglado el bug de version mobile de detalles de proyecto

--- a/src/assets/styles/ProjectDetail.css
+++ b/src/assets/styles/ProjectDetail.css
@@ -1,5 +1,16 @@
+.details-content {
+	display: flex;
+	flex-wrap: nowrap;
+	width: 100vw;
+	height: 100vh;
+	justify-content: center;
+	align-items: center;
+}
+
 .izq-project {
 	justify-content: center;
+	height: 100vh;
+	box-sizing: border-box;
 }
 
 .img-project {
@@ -48,6 +59,10 @@
 }
 
 @media (max-width: 1000px) {
+	.details-content {
+		flex-wrap: wrap;
+	}
+
 	.izq-project {
 		width: 100vw;
 		height: 100vh;
